# altis

src/common/: ResultDatabase.cpp
src/cuda/: CMakeLists.txt
src/cuda/common/: cuda_device_attr.h  main.cu
src/cuda/level2/: CMakeLists.txt
src/cuda/level2/kmeans/: CMakeLists.txt  kmeansraw.h  kmmain.cu
